# unnamed_file_explorer

./: .prettierrc.json  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
src/: App.tsx  Layout.tsx  Sidebar.tsx  bindings.ts  hooks.ts  output.css  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FileFolder.tsx  Terminal.tsx  Topbar.tsx
